With flex-video Box

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
 <div class="medium-2 columns">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat, deleniti, esse voluptates provident asperiores id sint veniam ea consequatur accusamus debitis similique eius cumque explicabo voluptatibus harum vitae incidunt eligendi.
 </div>
-<div id="map" class="medium-8 columns" style="height:400px">
+<div id="map" class="medium-8 columns flex-video">
   <script type="text/javascript">
   handler = Gmaps.build('Google');
   handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
